# Neuromorphic_noc_navigation

./: .gitignore  PROJECT_GUIDE.md  README.md  app.py  app_demo.py  build_backend.py  conftest.py  desktop_app.py  pyproject.toml  requirements.txt
.matplotlib-cache/: fontlist-v390.json
configs/: brian2loihi.yaml  dynamic_city_navigation.yaml  dynamic_sumo_overlay.yaml  graph.yaml  most.yaml  most_sumo_overlay.yaml  noxim.yaml
dataset_import/: __init__.py  dataset_config.py  dataset_loader.py  most_importer.py  road_graph_normalizer.py  sumo_netxml_importer.py
docs/: data_format.md  loihi_planner_demos.md  project_structure.md  protein_conformation_wavefront_review.md  refactor_audit.md  runbook.md  single_cell_fate_wavefront_review.md  snn_congestion_routing.md  snn_global_field_demo_results.md  snn_single_path_planning_benchmark.md  wavefront_science_scenarios_plain.md
experiments/: run_dynamic_city_navigation.py  run_dynamic_start_and_relay.py  run_dynamic_sumo_overlay_navigation.py  run_graph_baseline.py  run_loihi_wavefront.py  run_most_import.py  run_most_navigation.py  run_most_sumo_overlay_navigation.py  run_noc_validation.py  run_stdp_path_reconstruction.py  run_toolchain_check.py  run_week1_toolchain_check.py  snn_global_field_demo.py  snn_single_route_benchmark.py  visualize_path_comparison.py
graph/: __init__.py  complex_graph_generator.py  graph_baseline.py  graph_io.py  graph_metrics.py  visualization.py
localization/: __init__.py  dynamic_start.py  grid_cells.py  place_cells.py
loihi_planner/: __init__.py  _brian2_runner.py  backend_check.py  (+13 more)
(+138 files in other folders)
