[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "neuromorphic-sumo-navigation"
version = "0.1.0"
description = "SUMO/MoST city-road navigation with Brian2Loihi wavefront replanning"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
filterwarnings = ["ignore::DeprecationWarning:pyparsing.*"]
